[gd_scene load_steps=10 format=2]

[ext_resource path="res://Misc/Circle.png" type="Texture" id=1]
[ext_resource path="res://Game/Characters/Ninja Turtle/SmokeBomb.gd" type="Script" id=2]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform sampler2D noise;

void fragment() {
	
	COLOR = texture(noise, UV+vec2(sin(TIME), cos(TIME))*0.2)*texture(TEXTURE, UV).a*0.5f;
	
}"

[sub_resource type="OpenSimplexNoise" id=4]

[sub_resource type="NoiseTexture" id=5]
seamless = true
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/noise = SubResource( 5 )

[sub_resource type="CircleShape2D" id=1]
radius = 200.0

[sub_resource type="Animation" id=6]
resource_name = "Drop"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Smoke:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 4, 4 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Remove"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Smoke:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="SmokeBomb" type="Area2D"]
collision_layer = 32
script = ExtResource( 2 )

[node name="Smoke" type="Sprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/Drop = SubResource( 6 )
anims/Remove = SubResource( 7 )

[node name="Time" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_SmokeBomb_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SmokeBomb_body_exited"]
[connection signal="timeout" from="Time" to="." method="_on_Time_timeout"]
